<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Map Point</string>
    <string name="delete_string_db">Delete Row</string>
    <string name="date">Date:</string>
    <string name="alert_location_btn_cancel">Cancel</string>
    <string name="alert_location_btn_ok">Enable</string>
    <string name="alert_location_message">Enable geolocation?</string>
    <string name="alert_location_title">Geolocation disabled</string>
    <string name="autorenew_db">Update the data</string>
    <string name="cancel">Cancel</string>
    <string name="check_box_checked">Selected string</string>
    <string name="check_box_checked_off">Selected cancel</string>
    <string name="clear_form">Clear form</string>
    <string name="coordinates">Coordinates</string>
    <string name="database_unavailable">Database unavailable</string>
    <string name="deleting">All data removed</string>
    <string name="description">Description</string>
    <string name="edit_data">Edit data</string>
    <string name="format_lat">Latitude: %1$.4f</string>
    <string name="format_lon">Longitude: %1$.4f</string>
    <string name="group">Group</string>
    <string name="group2">To select the previous group - long press</string>
    <string name="im_here">I\'m here</string>
    <string name="lat">Latitude:</string>
    <string name="list_dialog_title">Points groups on the map</string>
    <string name="lon">Longitude:</string>
    <string name="menu_edit_string">Edit string data</string>
    <string name="nav_menu_item_data">Save data</string>
    <string name="nav_menu_item_deleteDB">Delete all</string>
    <string name="nav_menu_item_gps">Location by provider</string>
    <string name="nav_menu_item_map">Location on the map</string>
    <string name="nav_menu_item_position">Saved location on the map</string>
    <string name="nav_menu_item_settings">Settings</string>
    <string name="nav_menu_other">Addition</string>
    <string name="no_saved_record">No saved notes</string>
    <string name="point">Point</string>
    <string name="point_n">Point №:</string>
    <string name="provider_off">Provider is disable</string>


    <string name="action_edit_db_3">Fill in the "Group" and the "Point"</string>
    <string name="action_edit_db_2">Fill in the "Point"</string>
    <string name="action_edit_db_1">Fill in the "Group"</string>
    <string name="action_delete_db_string">A string of data deleted</string>
    <string name="alert_error_2">Data is not available</string>
    <string name="alert_error_1">No saved records</string>
    <string name="saving_data">Saving data</string>
    <string name="action_edit_db_string">A string of data changed</string>
    <string name="format_time">%1$tF  %1$tT</string>
    <string name="provider_1">Provider does not work</string>
    <string name="provider_2">Provider does not available</string>
    <string name="provider_3">Provider is available</string>
    <string name="save">Save data</string>
    <string name="provider_on">Provider is enable</string>
    <string name="save_coordinate">Save coordinates</string>
    <string name="select_string_change">Select the string to edit</string>
    <string name="recording_saved">Recording saved</string>


    <string name="pref_key_map_type">pref_key_map_type</string>
    <string name="pref_default_map_type">scheme</string>
    <string name="pref_title_map_type">Map type</string>

    <string-array name="pref_map_type_values">
        <item>scheme</item>
        <item>satellite</item>
        <item>terrain</item>
    </string-array>

    <string-array name="pref_map_type_titles">
        <item>Scheme</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>



</resources>
