<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MarkerInfoWindowActivity" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#999999"
            android:text="@string/group" />

        <EditText
            android:id="@+id/etGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp" >
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#666666"
        android:textSize="12dp"
        android:text="@string/group2"
        android:layout_marginLeft="60dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#999999"
            android:text="@string/point_n" />

        <EditText
            android:id="@+id/etItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="#ffffff"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvLatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#999999"
            android:layout_marginBottom="10dp"
            android:text="@string/lat" />

        <TextView
            android:id="@+id/tvLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvLngText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#999999"
            android:layout_marginBottom="10dp"
            android:text="@string/lon" />

        <TextView
            android:id="@+id/tvLng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#999999"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#999999"
            android:text="@string/description" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etDescription"
            android:textColor="#ffffff"
            android:gravity="top"/>
    </LinearLayout>

</LinearLayout>
