<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:background="#e0e0e0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp" >

        <android.support.v7.widget.RecyclerView
            android:layout_height="492dp"
            android:layout_width="match_parent"
            android:id="@+id/rv" >

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        fab:fab_addButtonColorNormal="#d64612"
        fab:fab_addButtonColorPressed="#ab380e"
        fab:fab_addButtonPlusIconColor="#fafafa"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_menu_autorenewDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="#689f38"
            fab:fab_colorPressed="#33691e"
            fab:fab_title="@string/autorenew_db"
            fab:fab_size="normal"
            fab:fab_icon="@drawable/ic_autorenew_white_18dp"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_menu_editDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="#009688"
            fab:fab_colorPressed="#00796b"
            fab:fab_title="@string/edit_data"
            fab:fab_size="normal"
            fab:fab_icon="@android:drawable/ic_menu_edit"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_menu_delete_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="#3f51b5"
            fab:fab_colorPressed="#283593"
            fab:fab_title="@string/nav_menu_item_deleteDB"
            fab:fab_size="normal"
            fab:fab_icon="@android:drawable/ic_menu_delete"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>
